--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -93,6 +93,10 @@ h1{
     width: 50px;
 }
 
+.fa-snowflake{
+    font-size:45px;
+}
+
 #search_bar{
     width:calc(100% - 50px);
     max-width:750px;
