--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -13,7 +13,7 @@ html{
     margin:0 auto;
     background-color:var(--primary-color);
     color:#5a4813;
-    font-family: "Balsamiq Sans", sans-serif !important;
+    font-family: "Balsamiq Sans", "Single Day", sans-serif !important;
     overflow-x:hidden;
 }
 
@@ -22,7 +22,7 @@ body{
     background-color:#f9f8e2;
     overflow-x:hidden;
     width:100vw;
-    font-family: "Balsamiq Sans", sans-serif !important;
+    font-family: "Balsamiq Sans", "Single Day", sans-serif !important;
 }
 
 #wave_top,#wave_bottom{
@@ -36,10 +36,6 @@ body{
 
 #wave_top{
     border-top:150px solid var(--primary-color);
-}
-
-#wave_top_russian{
-    border-top:150px solid #;
 }
 
 #wave_bottom{
@@ -78,19 +74,28 @@ h1{
 .baguette{
     background: url('baguette.svg');
     vertical-align: middle;
+    height: 50px;
+    width: 50px;
 }
 
 .star{
     background: url('star.svg');
     vertical-align: text-top;
+    height: 50px;
+    width: 50px;
 }
 
-.baguette,.star{
+.seal{
+    background: url('seal.svg');
+    vertical-align: -4px;
+    height:40px;
+    width:40px;
+}
+
+.baguette,.star,.seal{
     background-repeat: no-repeat;
     background-size: cover;
     display: inline-block;
-    height: 50px;
-    width: 50px;
 }
 
 .fa-snowflake{
@@ -108,7 +113,7 @@ h1{
     background-color:#e7e0c4;
     padding-left:50px;
     font-size:20px;
-    font-family: "Balsamiq Sans", sans-serif !important;
+    font-family: "Balsamiq Sans", "Single Day", sans-serif !important;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05);
     position: relative;
     z-index:20;
@@ -292,7 +297,7 @@ h2{
     background-color:#e7e0c4;
     padding-left:10px;
     font-size:20px;
-    font-family: "Balsamiq Sans", sans-serif !important;
+    font-family: "Balsamiq Sans", "Single Day", sans-serif !important;
     box-shadow: inset 0 5px 10px 0 rgba(0, 0, 0, 0.05);
     position: relative;
     z-index:20;
